perf: normalize apis
