# docs/swagger.json
@@ -50,23 +50,6 @@
             }
         },
         "/motions": {
-            "put": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Motion"
-                ],
-                "summary": "Resolve A Motion",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.Motion"
-                        }
-                    }
-                }
-            },
             "post": {
                 "security": [
                     {
@@ -131,9 +114,35 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Motion"
+                ],
+                "summary": "Resolve A Motion",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.Motion"
+                        }
+                    }
+                }
             }
         },
-        "/motions/{type}": {
+        "/motions/{id}/{type}": {
             "post": {
                 "security": [
                     {
@@ -148,6 +157,13 @@
                 ],
                 "summary": "Vote A Motion",
                 "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "type",
